--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">
