--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="row">
             <div class="col-md-5">
               <a href="#" class="subheader-logotype">
-                <img src="../img/logo/Uber.png" alt="logotype"
+                <img src="img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
                 Официальный партнер Uber в Москве
