--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-1.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-1.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">Комиссия 8% + БОНУСЫ</h3>
@@ -138,7 +138,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-2.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-2.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">
@@ -154,7 +154,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-3.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-3.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">
@@ -172,7 +172,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-4.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-4.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">
@@ -188,7 +188,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-5.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-5.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">
@@ -206,7 +206,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-6.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-6.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">Круглосуточная поддержка</h3>
@@ -219,7 +219,7 @@
           <div class="col-md-6">
             <div class="adv-item">
               <div class="adv-item-radius">
-                <img src="../src/img/adv-item/Rectangle-7.png" alt="auto pay" />
+                <img src="../img/adv-item/Rectangle-7.png" alt="auto pay" />
               </div>
               <div class="adv-item-descr">
                 <h3 class="adv-item-descr-header">Без шашечек и наклеек</h3>
@@ -377,22 +377,22 @@
         <div class="footer_social">
           <div class="footer_social_link">
             <a href="#">
-              <img src="../src/img/icon/social/facebook.svg" alt=""
+              <img src="../img/icon/social/facebook.svg" alt=""
             /></a>
           </div>
           <div class="footer_social_link">
             <a href="#"
-              ><img src="../src/img/icon/social/twitter.svg" alt=""
+              ><img src="../img/icon/social/twitter.svg" alt=""
             /></a>
           </div>
           <div class="footer_social_link">
             <a href="#"
-              ><img src="../src/img/icon/social/linkedin.svg" alt=""
+              ><img src="../img/icon/social/linkedin.svg" alt=""
             /></a>
           </div>
           <div class="footer_social_link">
             <a href="#"
-              ><img src="../src/img/icon/social/instagram.svg" alt=""
+              ><img src="../img/icon/social/instagram.svg" alt=""
             /></a>
           </div>
         </div>
@@ -402,7 +402,7 @@
           <div class="footer_menu_link"><a href="#">для водителей</a></div>
         </div>
         <div class="footer_mobile_link">
-          <img src="../src/img/icon/social/mobile.png" alt="" />
+          <img src="../img/icon/social/mobile.png" alt="" />
         </div>
         <div class="footer_submenu">
           <div class="footer_submenu_link"><a href="#">центр поддержки</a></div>
