edit number phone

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
-                Официальный партнер Uber в Москве
+                Официальный партнер Uber в Варшаве
               </div>
             </div>
             <div class="col-md-5">
