--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
-                Официальный партнер Uber в Москве
+                Официальный партнер Uber в Gb
               </div>
             </div>
             <div class="col-md-5">
@@ -381,14 +381,10 @@
             /></a>
           </div>
           <div class="footer_social_link">
-            <a href="#"
-              ><img src="../img/icon/social/twitter.svg" alt=""
-            /></a>
+            <a href="#"><img src="../img/icon/social/twitter.svg" alt="" /></a>
           </div>
           <div class="footer_social_link">
-            <a href="#"
-              ><img src="../img/icon/social/linkedin.svg" alt=""
-            /></a>
+            <a href="#"><img src="../img/icon/social/linkedin.svg" alt="" /></a>
           </div>
           <div class="footer_social_link">
             <a href="#"
