--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 <img src="img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
-                Официальный партнер Uber в Gb
+                Официальный партнер Uber в Польше
               </div>
             </div>
             <div class="col-md-5">
               <div class="subheader-call">Звоните нам ежедневно</div>
               <a href="tel:+48506587770" class="subheader-phone">
-                8 495 797 09 88</a
+                +48 506 587 770</a
               >
             </div>
             <div class="col-md-2">
