--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SECOND</title>
+    <title>Uber w Warszawie</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -57,7 +57,7 @@
           <div class="row">
             <div class="col-md-5">
               <a href="#" class="subheader-logotype">
-                <img src="img/logo/Uber.png" alt="logotype"
+                <img src="../img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
                 Официальный партнер Uber в Польше
