--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Uber w Warszawie</title>
+    <title>Biuro partnerskie Ubera w Warszawie</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,26 +28,26 @@
       <nav>
         <div class="container">
           <ul class="menu">
-            <li class="menu-item"><a href="#" class="menu-link">Главная</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">Strona Glówna</a></li>
             <span class="menu-border"></span>
             <li class="menu-item">
               <a href="#" class="menu-link">Со своим автомобилем</a>
             </li>
             <span class="menu-border"></span>
             <li class="menu-item">
-              <a href="#" class="menu-link">На автомобиле компании</a>
+              <a href="#" class="menu-link">Wynajem samochodów</a>
             </li>
             <span class="menu-border"></span>
             <li class="menu-item">
-              <a href="#" class="menu-link">Требования</a>
+              <a href="#" class="menu-link">Wymaganja</a>
             </li>
             <span class="menu-border"></span>
             <li class="menu-item">
-              <a href="#" class="menu-link">Контакты</a>
+              <a href="#" class="menu-link">Kontakt</a>
             </li>
             <span class="menu-border"></span>
             <li class="menu-item">
-              <a href="#" class="menu-link">Оставить заявку</a>
+              <a href="#" class="menu-link">Podłącz się</a>
             </li>
           </ul>
         </div>
