pl lang update 0.0.2a

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biuro partnerskie Ubera w Warszawie</title>
+    <title>Biuro partnerskie Ubera "777" w Warszawie</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -60,17 +60,17 @@
                 <img src="../img/logo/Uber.png" alt="logotype"
               /></a>
               <div class="subheader-official">
-                Официальный партнер Uber в Warsaw
+                Biuro partnerskie Ubera "777" w Warszawie
               </div>
             </div>
             <div class="col-md-5">
-              <div class="subheader-call">Звоните нам ежедневно</div>
+              <div class="subheader-call">Zadzwoń do nas</div>
               <a href="tel:+48506587770" class="subheader-phone">
                 +48 506 587 770</a
               >
             </div>
             <div class="col-md-2">
-              <button class="subheader-btn">заказать звонок</button>
+              <button class="subheader-btn">zamów oddzwonienie</button>
             </div>
           </div>
         </div>
