pl lang update 0.0.3a

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="advantages">
       <div class="container">
         <div class="adv-keywords">преимущества</div>
-        <div class="adv-heade">8 причин начать работать с нами</div>
+        <div class="adv-header">8 причин начать работать с нами</div>
         <div class="row">
           <div class="col-md-6">
             <div class="adv-item">
